<resources>
    <string name="app_name">WatchWorld</string>

    <!-- Menu -->
    <string name="menu_night_model">夜间模式</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slide_show">SlideShow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_change_title">更改栏目</string>
    <string name="menu_setting_cn">设置</string>


    <string name="title_gank">干货</string>
    <string name="text_no_more">没有更多数据</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_default_description">开眼看世界</string>
    <string name="animation_transition">transitionAnimator</string>
    <string name="description_image_view">ImageView</string>
    <string name="menu_save">保存</string>
    <string name="menu_share">分享</string>

    <!-- Data -->
    <string-array name="gank_item_type">
        <item>"All"</item>
        <item>"Android"</item>
        <item>"休息视频"</item>
        <item>"福利"</item>
        <item>"扩展资源"</item>
        <item>"前端"</item>
        <item>"瞎推荐"</item>
        <item>"App"</item>
    </string-array>

</resources>
