<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/new_tops"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_night_model"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slide_show"/>
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools"/>
    </group>

    <item android:title="@string/menu_setting">
        <menu>
            <item
                android:id="@+id/nav_night"
                android:icon="@drawable/ic_brightness_2_black_24px"
                android:title="@string/menu_night_model"/>
            <item
                android:id="@+id/nav_change"
                android:icon="@drawable/ic_sort_black_24px"
                android:title="@string/menu_change_title"/>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings_black_24px"
                android:title="@string/menu_setting_cn"/>
        </menu>
    </item>

</menu>
